# rime-configuration

./: .gitignore  .gitmodules  .ttxfolder  README.md  custom_phrase.txt  custom_phrase_double_pinyin.txt  default.custom.yaml  double_pinyin.custom.yaml  double_pinyin.schema.yaml  easy_en.schema.yaml  en.abbr.dict.yaml  en.prop_n.dict.yaml  init_rime.py  luna_pinyin.cn_en.dict.yaml  melt_eng.custom.yaml  rime_cn.dict.yaml  rime_en.dict.yaml  squirrel.custom.yaml  symbols.custom.yaml  update_upstream_dicts.py  upstream_repo.yaml  weasel.custom.yaml  withdewhua.dict.yaml  单静.trime.yaml
Android/: Qtss红与黑.trime.custom.yaml  Qtss红与黑.trime.yaml
Dictionary/: luna_pinyin.net.dict.yaml
Linux/: symbols.custom.yaml
Mac/: installation.yaml  user.yaml
Rime/: README.md  default.custom.yaml  double_pinyin.custom.yaml  melt_eng.custom.yaml  rime_en.dict.yaml  squirrel.custom.yaml  weasel.custom.yaml
Rime/Android/: 单静.trime.custom.yaml
Rime/Common/: custom_phrase_double_pinyin.txt  default.custom.yaml  default.yaml  double_pinyin.custom.yaml  double_pinyin.schema.yaml  key_bindings.yaml  melt_eng.custom.yaml  melt_eng.schema.yaml  moran.schema.yaml  rime.lua  (+7 more)
Share/: custom_phrase.txt  default.custom.yaml  double_pinyin_flypy.custom.yaml  en.abbr.dict.yaml  en.prop_n.dict.yaml  luna_pinyin.classical.dict.yaml  luna_pinyin.cn_en.dict.yaml  withdewhua.dict.yaml
Windows/: custom_phrase.txt  luna_pinyin.name.dict.yaml  luna_pinyin.website.dict.yaml  withdewhua.dict.yaml
opencc/: emoji.json  emoji_word.txt
scripts/: pyproject.toml  update_upstream_dicts.py  upstream_repo.yaml
(+27 files in other folders)
